<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_book"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kled.pagesaver.AddBookActivity"
    tools:showIn="@layout/activity_add_book">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_label"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_book_title"
            android:hint="@string/title_hint"
            android:inputType="textCapWords"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_label"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_book_author"
            android:hint="@string/author_hint"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_label"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/add_book_genre" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_label"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="# Pages read"
                android:id="@+id/add_book_progress_so_far"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:layout_column="1"
                android:layout_columnWeight="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="enter page count"
                android:id="@+id/add_book_total_pages"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="pages"
                android:layout_column="3"
                android:layout_columnWeight="1"/>

        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/date_started_label"/>

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_picker_add_book">

        </DatePicker>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/time_started_label"
            />

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_picker_add_book">
        </TimePicker>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_label"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter a number"
                android:id="@+id/add_book_duration_hour"
                android:inputType="number"
                android:layout_column="0"
                android:layout_columnWeight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hours"
                android:layout_column="1"
                android:layout_columnWeight="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter a number"
                android:id="@+id/add_book_duration_minute"
                android:inputType="number"
                android:layout_column="2"
                android:layout_columnWeight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="minutes"
                android:layout_column="3"
                android:layout_columnWeight="1"/>

        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ISBN:"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_book_isbn"
            android:hint="Enter ISBN here"
            android:layout_marginBottom="10dp"
            android:inputType="number"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_location_label"
            android:layout_gravity="center_horizontal"
            android:onClick="onAddLocationClick"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:padding="10dp"/>


    </LinearLayout>

</ScrollView>
