<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mark_complete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kled.pagesaver.MarkCompleteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/date_started_label"/>

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_picker_complete_book">

        </DatePicker>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/time_started_label"
            />

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_picker_complete_book">
        </TimePicker>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_label"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter a number"
                android:inputType="number"
                android:id="@+id/complete_dur_hours"
                android:layout_column="0"
                android:layout_columnWeight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hours"
                android:layout_column="1"
                android:layout_columnWeight="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter a number"
                android:id="@+id/complete_dur_minutes"
                android:inputType="number"
                android:layout_column="2"
                android:layout_columnWeight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="minutes"
                android:layout_column="3"
                android:layout_columnWeight="1"/>

        </GridLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_label"
            android:layout_marginBottom="10dp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/complete_book_rating_bar"
            android:layout_marginBottom="10dp"
            android:numStars="5"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_label"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/complete_book_comments"
            android:hint="Enter any comments here"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageButton
                android:id="@+id/btn_mic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/microphone"
                android:onClick="onSpeechClick" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/speech"
                android:layout_centerHorizontal="true"
                android:textSize="15dp"
                android:textStyle="normal"
                />
        </LinearLayout>


        <Button
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_location_label"
            android:layout_gravity="center_horizontal"
            android:onClick="onAddLocationClick"
            android:layout_marginBottom="10dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:columnCount="2">

            <Button
                android:background="#25A2CC"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Save"
                android:id="@+id/edit_book_save_button"
                android:onClick="onSaveButtonClicked"
                android:layout_marginRight="3dp"
                android:layout_column="0"
                android:layout_columnWeight="1"/>

            <Button
                android:layout_marginLeft="3dp"
                android:background="#25A2CC"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/edit_book__cancel_button"
                android:onClick="onCancelButtonClicked"
                android:text="Cancel"
                android:layout_column="1"
                android:layout_columnWeight="1"/>
        </GridLayout>



    </LinearLayout>

</ScrollView>
